# seal_cards

./: .gitignore  dino.json  package-lock.json  package.json  tailwind.config.js
.cursor/commands/: design.md
anchor-program/: .gitignore  Anchor.toml  README.md  build.sh  package-lock.json  package.json  tsconfig.json
anchor-program/programs/anchor-program/: Cargo.toml
anchor-program/programs/anchor-program/src/: lib.rs
anchor-program/tests/: anchor-program.ts
app/: globals.css  layout.tsx  page.tsx
app/api/game/: storage.ts  types.ts
app/api/game/start/: route.ts
app/api/game/start-pack/: route.ts
app/api/game/state/: route.ts
app/api/game/system-turn/: route.ts
app/api/game/user-turn/: route.ts
app/game/: page.tsx
app/game/play/: page.tsx
components/: AnimatedButton.tsx  Card.tsx  CardDeck.tsx  ChooseSetModal.tsx  DeckStack.tsx  GameCard.tsx  LoginToPlayButton.tsx  PrivyProviderWrapper.tsx  WalletCorner.tsx
native-solana-program/: Cargo.toml  README.md  build.sh  package.json
native-solana-program/src/: lib.rs
native-solana-program/tests/: native-solana-program.ts
