[package]
name = "native-solana-program"
version = "0.1.0"
description = "Native Solana program with getter and setter"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "native_solana_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~2.0"
